# NeuralNetworkBasis

./: CMakeLists.txt  common.hpp  config.json  layer.cpp  layer.hpp  loss.cpp  loss.hpp  main.cpp  misc.cpp  utils.cpp
dataloader/: dataset.cpp  dataset.hpp
include/: layer.hpp  model.hpp
src/: layer.cpp  loss.cpp  main.cpp  model.cpp
src/utils/: dataset.cpp
utils/: dataloader.hpp  dataset.cpp  dataset.hpp
